--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,17 @@
   "description": "Control de horas trabajadas simple y offline",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "logo.png",
+      "sizes": "1024x1024",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
